test/compile_errors/stage1/obj/compile_time_division_by_zero.zig
const y = foo(0);
fn foo(x: u32) u32 {
    return 1 / x;
}

export fn entry() usize { return @sizeOf(@TypeOf(y)); }

// compile time division by zero
//
// tmp.zig:3:14: error: division by zero
